<resources>
    <string name="app_name">Phenocraft</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_cloning_search">cloning_search</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_button_cloning">Cloning</string>
    <string name="main_button_planting">Planting</string>
    <string name="main_button_harvest">Harvest</string>
    <string name="main_button_flowering">Flowering</string>
    <string name="main_button_1l_potting">1L Potting</string>
    <string name="main_button_locate">Locate</string>
    <string name="main_label_phenocraft">PhenoCraft</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
</resources>
